[package]
name = "rust_docker"
version = "0.1.2"
description = "A docker wrapper to interact with docker daemon."
license = "MIT"
authors = ["Deepesh Pathak <deepshpathak@gmail.com>", "Jeff Moody <fifthecho@gmail.com>"]
repository = "https://github.com/fifthecho/docker.rs.git"
documentation = "https://docs.rs/rust_docker"
readme = "README.md"
keywords = ["docker", "api", "unix-sockets"]

[dependencies]
quick-error = "1.2.2"
serde_derive = "1.0.89"
serde = "1.0.89"
serde_json = "1.0.39"
